--- a/namecard/package.json
+++ b/namecard/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "simplebiz",
+  "name": "namecard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
